fix(yalb-alignment): add subtle quick links to left align page

--- a/components/02-molecules/quick-links/_yds-quick-links.scss
+++ b/components/02-molecules/quick-links/_yds-quick-links.scss
@@ -137,6 +137,10 @@
 
 .quick-links__link {
   @include atoms.link;
+
+  [data-quick-links-variation='subtle'] & {
+    --color-text-shadow: var(--color-basic-white);
+  }
 }
 
 .quick-links__cta {
